# MOS6502

./: .clang-format  CMakeLists.txt  LICENSE.md  Makefile  README.md
.github/workflows/: CMake.yml  main.yml
include/: MOS6502.h  cpu.h  hello_world.h  mem.h
src/: MOS6502.cpp  cpu.cpp  main.cpp  mem.cpp
tests/: arithmetic_tests.cpp  branch_tests.cpp  increments_decrements_tests.cpp  jumps_calls_tests.cpp  load_store_tests.cpp  load_tests.cpp  logical_tests.cpp  register_transfer_tests.cpp  shifts_tests.cpp  stack_operations_tests.cpp  status_flag_tests.cpp  store_tests.cpp  system_tests.cpp  template_test.cpp
